
  * new upstream svn snapshot (svn revision 16508, libswscale revision 28286)
  
  Upstream Changes:
   - RV30 and RV40 decoder
   - QCELP / PureVoice decoder
  
  * removed patch 050_fix_pkgconfig_files.patch. Merged upstream
  * disabled patch 020_visibility_patch. It needs to be adapted to the new
    upstream changes. Hopefully it will get merged into ffmpeg properly.

 -- Reinhard Tartler <siretart@tauware.de>  Sat, 10 Jan 2009 16:36:52 +0100

ffmpeg-debian (3:0.svn20081115-1) experimental; urgency=low

  * new upstream svn snapshot (svn revision 15824, libswscale revision 27910)
  * bump standards version to version 3.8.0, no changes needed
  * Adjust pkg-files to no longer put unnecessary dependencies in the generated
    .pc files. Closes: #504220

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 10 Nov 2008 21:37:16 +0100

ffmpeg-debian (3:0.svn20081108-1) experimental; urgency=low

  * upstream svn snapshot (svn revision 15786, libswscale revision 27900).
  * apply visibility patch from ffmpeg-devel mailing list. This reduces the 
    number of symbols that are exposed to other applications. Please file
    bugs if applications fail to link against ffmpeg because of that.
  * remove 001_fixup_version.diff patch and use upstream --extra-version
    configure flag instead.
  * now really remove 015_img_convert.patch from source package.

 -- Reinhard Tartler <siretart@tauware.de>  Sat, 08 Nov 2008 16:38:23 +0100

ffmpeg-debian (3:0.svn20080925-1) experimental; urgency=low

  [ Loic Minier ]
  * Tweak sed versions regexps to deal with epochs and upstream revisions with
    dashes and be generally stricter.
  * Large cleanup to rules logic: drop some cruft, rewrite some small chunks
    in a slightly more readable manner, whitespaces, .PHONY fixes,
    internalencoders handling, shlibs logic...
  * Rename SRC_VERSION to UPSTREAM_VERSION in rules.
  * Use DEB_SOURCE from the Source: field of dpkg-parsechangelog's output